[build-system]
requires = ["setuptools>=80", "wheel", "Cython", "numpy", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pydpc"
description = "Clustering by fast search and find of density peaks"
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
authors = [{ name = "Christoph Wehmeyer", email = "wehmeyer.chris@gmail.com" }]
dependencies = ["numpy >= 1.7", "matplotlib"]
dynamic = ["version"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "pre-commit"]

[tool.setuptools]
packages = ["pydpc"]

[tool.setuptools_scm]
version_file = "pydpc/_version.py"
fallback_version = "0.1.3"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.coverage.run]
source = ["pydpc"]
